<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.github.jikoo</groupId>
  <artifactId>regionerator</artifactId>
  <name>Regionerator</name>
  <version>2.0.0-BETA-2</version>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.jetbrains</groupId>
      <artifactId>annotations</artifactId>
      <version>13.0</version>
    </dependency>
    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <version>21.0</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.spigotmc</groupId>
      <artifactId>spigot-api</artifactId>
      <version>1.13.2-R0.1-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.sk89q.worldedit</groupId>
      <artifactId>worldedit-bukkit</artifactId>
      <version>7.0.0-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.sk89q.worldguard</groupId>
      <artifactId>worldguard-legacy</artifactId>
      <version>7.0.0-SNAPSHOT</version>
      <scope>provided</scope>
      <exclusions>
        <exclusion>
          <groupId>com.destroystokyo.paper</groupId>
          <artifactId>paper-api</artifactId>
        </exclusion>
        <exclusion>
          <groupId>com.sk89q</groupId>
          <artifactId>commandbook</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>com.github.TechFortress</groupId>
      <artifactId>GriefPrevention</artifactId>
      <version>16.11.5</version>
      <scope>provided</scope>
      <exclusions>
        <exclusion>
          <groupId>com.sk89q.worldguard</groupId>
          <artifactId>worldguard-legacy</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>com.github.marcelo-mason</groupId>
      <artifactId>PreciousStones</artifactId>
      <version>24e3d4bf67</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>br.net.fabiozumbi12.RedProtect</groupId>
      <artifactId>RedProtect-Core</artifactId>
      <version>7.6.2</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>br.net.fabiozumbi12.RedProtect</groupId>
      <artifactId>RedProtect-Spigot</artifactId>
      <version>7.6.2</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.massivecraft</groupId>
      <artifactId>Factions</artifactId>
      <version>2.8.1</version>
      <scope>system</scope>
      <systemPath>${project.basedir}/lib/Factions.jar</systemPath>
    </dependency>
    <dependency>
      <groupId>com.massivecraft</groupId>
      <artifactId>MassiveCore</artifactId>
      <version>2.8.1</version>
      <scope>system</scope>
      <systemPath>${project.basedir}/lib/MassiveCore.jar</systemPath>
    </dependency>
    <dependency>
      <groupId>com.jcdesimp</groupId>
      <artifactId>Landlord</artifactId>
      <version>1.3</version>
      <scope>system</scope>
      <systemPath>${project.basedir}/lib/Landlord.jar</systemPath>
    </dependency>
    <dependency>
      <groupId>com.palmergames</groupId>
      <artifactId>Towny</artifactId>
      <version>0.91.4.3</version>
      <scope>system</scope>
      <systemPath>${project.basedir}/lib/Towny.jar</systemPath>
    </dependency>
    <dependency>
      <groupId>org.redcastlemedia.multitallented</groupId>
      <artifactId>civs</artifactId>
      <version>1.5.4</version>
      <scope>system</scope>
      <systemPath>${project.basedir}/lib/civs.jar</systemPath>
    </dependency>
    <!-- Premium dependencies -->
    <dependency>
      <groupId>org.kingdoms</groupId>
      <artifactId>Kingdoms</artifactId>
      <version>7.9.5</version>
      <scope>system</scope>
      <systemPath>${project.basedir}/premium/Kingdoms.jar</systemPath>
    </dependency>
    <dependency>
      <groupId>us.forseth11</groupId>
      <artifactId>Feudal</artifactId>
      <version>Lite-1.0</version>
      <scope>system</scope>
      <systemPath>${project.basedir}/premium/FeudalLite.jar</systemPath>
    </dependency>
    <dependency>
      <groupId>com.bekvon.bukkit</groupId>
      <artifactId>Residence</artifactId>
      <version>4.5.13.3</version>
      <scope>system</scope>
      <systemPath>${project.basedir}/premium/Residence.jar</systemPath>
    </dependency>
    <dependency>
      <groupId>me.angeschossen</groupId>
      <artifactId>Lands</artifactId>
      <version>4.3.1.2</version>
      <scope>system</scope>
      <systemPath>${project.basedir}/premium/Lands.jar</systemPath>
    </dependency>
    <dependency>
      <groupId>com.songoda</groupId>
      <artifactId>UltimateClaims</artifactId>
      <version>1.1.0</version>
      <scope>system</scope>
      <systemPath>${project.basedir}/premium/UltimateClaims.jar</systemPath>
    </dependency>
  </dependencies>

  <repositories>
    <repository>
        <id>spigot-repo</id>
        <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
    </repository>
    <repository>
      <id>sk89q-repo</id>
      <url>http://maven.sk89q.com/repo/</url>
    </repository>
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>
    <repository>
      <id>redprotect-repo</id>
      <url>https://raw.github.com/FabioZumbi12/RedProtect/mvn-repo/</url>
    </repository>
  </repositories>

  <build>
    <finalName>${project.name}</finalName>

    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>true</filtering>
        <includes>
          <include>**/*.yml</include>
        </includes>
      </resource>
    </resources>
    <plugins>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>2.4.3</version>
        <configuration>
          <minimizeJar>true</minimizeJar>
        </configuration>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.1</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
          <showDeprecation>false</showDeprecation>
          <showWarnings>true</showWarnings>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
